# sshx

./: .gitignore  Cargo.toml  README.md  install_toolchains.md
.cargo/: config.toml
crates/sshx/: Cargo.toml
crates/sshx-core/src/: lib.rs
crates/sshx-server/: Cargo.toml
crates/sshx-server/src/: grpc.rs  web.rs
crates/sshx/src/: controller.rs  main.rs
docker/: Dockerfile
scripts/: get-sshx.sh  get.sh  release.sh  sshx-server.service
