[package]
name = "sshx-server"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
async-channel = "2.3.1"
async-stream = "0.3.6"
axum = { version = "0.8.4", features = ["http2", "ws"] }
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
ciborium = "0.2.2"
clap.workspace = true
dashmap = "6.1.0"
deadpool = "0.12.2"
deadpool-redis = "0.21.1"
futures-util = { version = "0.3.31", features = ["sink"] }
hmac = "0.12.1"
http = "1.3.1"
parking_lot = "0.12.4"
prost.workspace = true
rand.workspace = true
redis = { version = "0.31.0", features = ["tokio-rustls-comp"] }
serde.workspace = true
sha2 = "0.10.9"
sshx-core.workspace = true
subtle = "2.6.1"
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = "0.26.2"
tonic.workspace = true
tonic-reflection.workspace = true
tower = { version = "0.5.2", features = ["steer", "make", "util"] }
tower-http = { version = "0.6.6", features = ["fs", "redirect", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zstd = "0.13.3"

[dev-dependencies]
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
sshx = { path = "../sshx" }
