[package]
name = "sshx"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes = "0.8.3"
ansi_term = "0.12.1"
anyhow.workspace = true
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
cfg-if = "1.0.0"
clap.workspace = true
ctr = "0.9.2"
encoding_rs = "0.8.31"
pin-project = "1.1.3"
sshx-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
whoami = { version = "1.5.1", default-features = false }

# hyper = { version = "1.6.0", default-features = true }
# hyper-util = { path = "../../hyper-util/", version = "0.1.14", features = ["http2", "client", "client-legacy"] }
hyper-util = {version = "0.1.14", features = ["client-legacy", "client-proxy", "http2"]}
hyper-http-proxy = { version = "1.1.0", default-features = false, features = ["rustls-tls-webpki-roots"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http2", "ring"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
# rustls = { version = "0.23.27", features = ["ring"] }
# rustls-native-certs = { version = "0.8.1" }
# webpki-roots = { version = "1.0.0", optional = true }

# [features]
# rustls-tls-webpki-roots = ["dep:webpki-roots", "__rustls", "hyper-rustls/webpki-roots"]
# rustls-tls-native-roots = ["dep:rustls-native-certs", "__rustls", "hyper-rustls/rustls-native-certs"]
# __tls = []
# # Enables common rustls code.
# # Equivalent to rustls-tls-manual-roots but shorter :)
# __rustls = ["dep:hyper-rustls", "dep:tokio-rustls", "__tls"]

[target.'cfg(unix)'.dependencies]
close_fds = "0.3.2"
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term"] }

[target.'cfg(windows)'.dependencies]
conpty = "0.7.0"
